--- a/.github/workflows/mailer.yml
+++ b/.github/workflows/mailer.yml
@@ -2,37 +2,33 @@ name: Send Gardening Weather Report
 
 on:
   schedule:
-    # Runs at 5:00 AM Kansas City time (10:00 UTC) on Monday, Wednesday, and Friday.
-    # The cron format is: Minute Hour Day(Month) Month Day(Week)
     - cron: '0 10 * * 1,3,5'
-  
-  # This line allows you to run the workflow manually from the Actions tab.
   workflow_dispatch:
 
 jobs:
   build-and-send:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checks out your repository's code so the runner can use it.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Sets up the Python environment.
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      # Step 3: Creates the credential files from the secure secrets.
+      # --- NEW DEBUGGING STEP ---
+      - name: Check secret length
+        run: echo "The TOKEN_JSON secret is ${{ nchar(secrets.TOKEN_JSON) }} characters long."
+      # --- END OF NEW STEP ---
+
       - name: Recreate credential files from secrets
         run: |
-          echo "${{ secrets.CREDENTIALS_JSON }}" > credentials.json
+          echo "${{ secrets.CREDENTIALS_JSON }}" | base64 --decode > credentials.json
           echo "${{ secrets.TOKEN_JSON }}" | base64 --decode > token.json
       
-      # Step 4: Installs the Python libraries your script needs.
       - name: Install dependencies
         run: pip install --upgrade requests pandas google-api-python-client google-auth-httplib2 google-auth-oauthlib
 
-      # Step 5: Runs your script to send the email.
       - name: Run the python script
         run: python weather_report.py
